2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (libintl.la): Use @LTLIBICONV@ instead of @LIBICONV@.

2002-01-10  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (_nl_default_dirname): On OS/2, declare, not define.
	* localcharset.c: Rework OS/2 support.
	* config.charset: Add OS/2 support.
	* os2compat.c: Renamed from os2.c.
	(_nl_default_dirname): Define here.
	* os2compat.h: Moved here from ../os2/.
	* osdep.c: Update.
	* Makefile.in (COMHDRS): Add os2compat.h.
	(COMSRCS): Add os2compat.c, remove os2.c.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (libintl.la): Add -lc. Needed on AIX.

2002-01-02  Bruno Haible  <bruno@clisp.org>

	* loadmsgcat.c (_nl_init_domain_conv): Convert extern declaration to
	K&R syntax.

2002-01-02  Bruno Haible  <bruno@clisp.org>

	* plural.y: Fix %expect count.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* os2.c (os2_initialize): Use LOCALEDIR_MAX macro.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* libgettext.h: Moved to ../lib/gettext.h.
	* Makefile.in (HEADERS): Remove libgettext.h.
	(DISTFILES.obsolete): Add libgettext.h.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* gmo.h: Renamed from gettext.h.
	* gettext.h: Remove file.
	* gettextP.h: Update accordingly.
	* loadmsgcat.c: Likewise.
	* Makefile.in (COMHDRS): Add gmo.h, remove gettext.h.
	(DISTFILES.obsolete): Add gettext.h.
	Update dependencies.

2001-12-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:0:0.
	Used to force an soname of at least libintl.so.2 on Solaris, which
	already has a different libintl.so.1 in /usr/lib.

2001-12-15  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* osdep.c: New file.
	* os2.c: New file.