@@ -1,5 +1,5 @@
 /* Expression evaluation for plural form selection.
-   Copyright (C) 2000, 2001 Free Software Foundation, Inc.
+   Copyright (C) 2000-2002 Free Software Foundation, Inc.
    Written by Ulrich Drepper <drepper@cygnus.com>, 2000.
 
    This program is free software; you can redistribute it and/or modify
@@ -26,4 +26,4 @@
 
 /* Include the expression evaluation code from libintl, this time with
    'extern' linkage.  */
-#include "../intl/plural-eval.c"
+#include "../intl/eval-plural.h"
